# NetChat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.cpp  main.cpp  server.cpp
inc/: Client.h  Ip.h  Ipv4.h  Ipv6.h  Log.h  Server.h  Socket.h  WindowsSocketRaii.h  WinsockRaii.h
src/: Client.cpp  Ip.cpp  Ipv4.cpp  Ipv6.cpp  Server.cpp  Socket.cpp  WindowsSocketRaii.cpp  WinsockRaii.cpp
